--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^5.2.0",
     "react-swipeable-views": "^0.13.9",
     "recharts": "^1.8.5",
+    "redux-devtools-extension": "^2.13.8",
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^4.2.1",
     "webpack": "^4.44.1",
